@@ -161,6 +161,24 @@ class tx_directmail_dmail extends t3lib_SCbase {
 			t3lib_div::loadTCA($this->userTable);
 			$this->allowedTables[] = $this->userTable;
 		}
+		
+		// check if the right domain shoud be set
+		if (!$this->params['use_domain']) {
+			$rootLine = t3lib_BEfunc::BEgetRootLine($this->id);
+			if ($rootLine)  {
+				$parts = parse_url(t3lib_div::getIndpEnv('TYPO3_SITE_URL'));
+				if (t3lib_BEfunc::getDomainStartPage($parts['host'],$parts['path']))    {
+					$preUrl_temp = t3lib_BEfunc::firstDomainRecord($rootLine);
+					$domain = t3lib_BEfunc::getRecordsByField('sys_domain','domainName',$preUrl_temp,' AND hidden=0','','sorting');
+					if (is_array($domain)) {
+						reset($domain);
+						$dom = current($domain);
+						$this->params['use_domain'] = $dom['uid'];
+					}
+				}
+			}
+		}
+		
 		$this->MOD_MENU['dmail_mode'] = t3lib_BEfunc::unsetMenuItems($this->params,$this->MOD_MENU['dmail_mode'],'menu.dmail_mode');
 
 			// initialize the TS template
@@ -1686,8 +1704,8 @@ class tx_directmail_dmail extends t3lib_SCbase {
 				$outLines[] = array(
 					'<a href="index.php?id='.$this->id.'&createMailFrom_UID='.$row['uid'].'&fetchAtOnce=1&CMD=info">'.t3lib_iconWorks::getIconImage('pages', $row, $BACK_PATH, ' title="'.htmlspecialchars(t3lib_BEfunc::getRecordPath ($row['uid'],$this->perms_clause,20)).'" style="vertical-align: top;"').$row['title'].'</a>',
 					'<a href="#" onClick="'.t3lib_BEfunc::editOnClick('&edit[pages]['.$row['uid'].']=edit&edit_content=1',$BACK_PATH,"",1).'"><img'.t3lib_iconWorks::skinImg($BACK_PATH, 'gfx/edit2.gif', 'width="12" height="12"').' alt="'.$LANG->getLL("dmail_edit").'" style="vertical-align:top;" title="'.$LANG->getLL("nl_editPage").'" /></a>',
-					'<a href="#" onClick="'.t3lib_BEfunc::viewOnClick($row['uid'],$BACK_PATH,'','','',$this->implodedParams['HTMLParams']).'"><img src="../res/gfx/preview_html.gif" width="16" height="16" alt="" style="vertical-align:top;" title="'.$LANG->getLL('nl_viewPage_HTML').'"/></a>',
-					'<a href="#" onClick="'.t3lib_BEfunc::viewOnClick($row['uid'],$BACK_PATH,'','','',$this->implodedParams['plainParams']).'"><img src="../res/gfx/preview_txt.gif" width="16" height="16" alt="" style="vertical-align:top;" title="'.$LANG->getLL('nl_viewPage_TXT').'"/></a>',
+					'<a href="#" onClick="'.t3lib_BEfunc::viewOnClick($row['uid'],$BACK_PATH,t3lib_BEfunc::BEgetRootLine($row['uid']),'','',$this->implodedParams['HTMLParams']).'"><img src="../res/gfx/preview_html.gif" width="16" height="16" alt="" style="vertical-align:top;" title="'.$LANG->getLL('nl_viewPage_HTML').'"/></a>',
+					'<a href="#" onClick="'.t3lib_BEfunc::viewOnClick($row['uid'],$BACK_PATH,t3lib_BEfunc::BEgetRootLine($row['uid']),'','',$this->implodedParams['plainParams']).'"><img src="../res/gfx/preview_txt.gif" width="16" height="16" alt="" style="vertical-align:top;" title="'.$LANG->getLL('nl_viewPage_TXT').'"/></a>',
 					);
 			}
 			$out = tx_directmail_static::formatTable($outLines, array(), 0, array(1,1,1,1));
